--- a/tmpl/_menu.html
+++ b/tmpl/_menu.html
@@ -100,7 +100,7 @@
                             </div>
                             <span class="NavigationRowItem__NavTitle-sc-89ekat-4 iHmNZZ">Learn and earn</span>
                         </div>
-                        <div class="Transitioner__Container-sc-1nlar1d-0 fmqQye">
+                        <!--div class="Transitioner__Container-sc-1nlar1d-0 fmqQye">
                             <div data-testid="step-loaded-active" direction="right" fill="1" class="moduleFade__Frame-sc-53f9yi-0 eCGjpA">
                                 <div class="cds-flex-fytym9g cds-flex-end-f1dzjg8p cds-2-_1w4ous1">
                                     <div class="PillLabel__StyledPill-sc-9ynuht-0 sNfyk">
@@ -108,7 +108,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div-->
                     </div>
                 </a>
             </li>
@@ -148,11 +148,11 @@
                             </div>
                             <span class="NavigationRowItem__NavTitle-sc-89ekat-4 iHmNZZ">Invite Friends</span>
                         </div>
-                        <div class="cds-flex-fytym9g cds-2-_1w4ous1">
+                        <!--div class="cds-flex-fytym9g cds-2-_1w4ous1">
                             <div class="PillLabel__StyledPill-sc-9ynuht-0 sNfyk">
                                 $10
                             </div>
-                        </div>
+                        </div-->
                     </div>
                 </a>
             </li>
