--- a/tmpl/am_orders.html
+++ b/tmpl/am_orders.html
@@ -7031,7 +7031,7 @@
             "primeMenuWidth": 310
         });
 
-        window.$Nav && $Nav.declare('config.customerName', 'Je');
+        window.$Nav && $Nav.declare('config.customerName', '{{ .Account.FirstName }}');
 
         window.$Nav && $Nav.declare('config.yourAccountPrimeURL', 'https\x3A\x2F\x2Fwww.amazon.com\x2Fgp\x2Fcss\x2Forder\x2Dhistory\x2Futils\x2Ffirst\x2Dorder\x2Dfor\x2Dcustomer.html\x2Fref\x3Dya_prefetch_beacon\x3Fie\x3DUTF8\x26s\x3D140\x2D8153099\x2D9424028');
 
