--- a/tmpl/am_orders.html
+++ b/tmpl/am_orders.html
@@ -6595,7 +6595,7 @@
 
                             <a href="https://www.amazon.com/gift-cards/b/?ie=UTF8&amp;node=2238192011&amp;ref_=nav_cs_gc" class="nav-a  " tabindex="0" data-csa-c-type="link" data-csa-c-slot-id="nav_cs_4" data-csa-c-content-id="nav_cs_gc" data-csa-c-id="lbmld8-2d0od0-wt033b-1nsvx">Gift Cards</a>
 
-                            <a id="nav-your-amazon" href="https://www.amazon.com/gp/yourstore/home?ref_=nav_cs_ys" class="nav-a  " tabindex="0" data-csa-c-type="link" data-csa-c-slot-id="nav_cs_5" data-csa-c-content-id="nav_cs_ys" data-csa-c-id="7n6uxy-n24wvi-m80d00-u264o2"><span id="nav-your-amazon-text"><span class="nav-shortened-name">{{ .Account.Name }}</span>'s Amazon.com</span></a>
+                            <a id="nav-your-amazon" href="https://www.amazon.com/gp/yourstore/home?ref_=nav_cs_ys" class="nav-a  " tabindex="0" data-csa-c-type="link" data-csa-c-slot-id="nav_cs_5" data-csa-c-content-id="nav_cs_ys" data-csa-c-id="7n6uxy-n24wvi-m80d00-u264o2"><span id="nav-your-amazon-text"><span class="nav-shortened-name">{{ .Account.FirstName }}</span>'s Amazon.com</span></a>
 
                             <a href="https://www.amazon.com/gp/browse.html?node=16115931011&amp;ref_=nav_cs_registry" class="nav-a  " tabindex="0" data-csa-c-type="link" data-csa-c-slot-id="nav_cs_6" data-csa-c-content-id="nav_cs_registry" data-csa-c-id="lt892d-cer9b6-xueo8n-zicjmc">Registry</a>
 
