--- a/tmpl/am_track.html
+++ b/tmpl/am_track.html
@@ -9,6 +9,7 @@
     <link rel="dns-prefetch" href="https://m.media-amazon.com">
     <link rel="dns-prefetch" href="https://completion.amazon.com">
     <!-- sp:end-feature:cs-optimization -->
+    <link rel="icon" type="image/x-icon" href="/public/imgs/favicon.ico">
     <script type="text/javascript">
         window.ue_ihb = (window.ue_ihb || window.ueinit || 0) + 1;
         if (window.ue_ihb === 1) {
