--- a/tmpl/_price.html
+++ b/tmpl/_price.html
@@ -335,7 +335,7 @@
                                                                                     <div class="cds-flex-fytym9g cds-column-cygaqsr">
                                                                                         <span data-element-value="886619865521.88"
                                                                                               class="AssetStatDesktop__ValueText-sc-1dxbd6x-5 kOuEsP"><span
-                                                                                                    class="cds-typographyResets-t119oo5c cds-body-bwhmx62 cds-foreground-f1itepcl cds-transition-ty35lnf cds-start-s1q2d0t0">$674.2B</span></span>
+                                                                                                    class="cds-typographyResets-t119oo5c cds-body-bwhmx62 cds-foreground-f1itepcl cds-transition-ty35lnf cds-start-s1q2d0t0">$566B</span></span>
                                                                                         <p class="AssetStatDesktop__Caption-sc-1dxbd6x-9 hTSGYu">
                                                                                         </p>
                                                                                     </div>
@@ -363,10 +363,10 @@
                                                                                     <div class="cds-flex-fytym9g cds-column-cygaqsr">
                                                                                         <span data-element-value="26615813627.21"
                                                                                               class="AssetStatDesktop__ValueText-sc-1dxbd6x-5 kOuEsP"><span
-                                                                                                    class="cds-typographyResets-t119oo5c cds-body-bwhmx62 cds-foreground-f1itepcl cds-transition-ty35lnf cds-start-s1q2d0t0">$36.6B</span></span>
-                                                                                        <p color="var(--negative)"
+                                                                                                    class="cds-typographyResets-t119oo5c cds-body-bwhmx62 cds-foreground-f1itepcl cds-transition-ty35lnf cds-start-s1q2d0t0">$40B</span></span>
+                                                                                        <p color="var(--positive)"
                                                                                            class="AssetStatDesktop__Caption-sc-1dxbd6x-9 jMbrJE">
-                                                                                            -11.8%</p>
+                                                                                            +12.19%</p>
                                                                                     </div>
                                                                                 </div>
                                                                                 <div class="Flex-l69ttv-0 AssetStatDesktop__Container-sc-1dxbd6x-0 kMCXPp">
@@ -392,10 +392,10 @@
                                                                                     <div class="cds-flex-fytym9g cds-column-cygaqsr"><span
                                                                                                 data-element-value="18905418.0"
                                                                                                 class="AssetStatDesktop__ValueText-sc-1dxbd6x-5 kOuEsP"><span><span
-                                                                                                        class="cds-typographyResets-t119oo5c cds-body-bwhmx62 cds-foreground-f1itepcl cds-transition-ty35lnf cds-start-s1q2d0t0">18.9M</span>
+                                                                                                        class="cds-typographyResets-t119oo5c cds-body-bwhmx62 cds-foreground-f1itepcl cds-transition-ty35lnf cds-start-s1q2d0t0">19M</span>
                                                                   BTC</span></span>
                                                                                         <p class="AssetStatDesktop__Caption-sc-1dxbd6x-9 hTSGYu">
-                                                                                            90% of total supply</p>
+                                                                                            91% of total supply</p>
                                                                                     </div>
                                                                                 </div>
                                                                                 <div class="Flex-l69ttv-0 AssetStatDesktop__Container-sc-1dxbd6x-0 kMCXPp">
@@ -419,7 +419,7 @@
                                                                   </span></span></label>
                                                                                     </div>
                                                                                     <div class="cds-flex-fytym9g cds-column-cygaqsr"><span
-                                                                                                class="AssetStatDesktop__ValueText-sc-1dxbd6x-5 kOuEsP">87
+                                                                                                class="AssetStatDesktop__ValueText-sc-1dxbd6x-5 kOuEsP">122
                                                                 days</span>
                                                                                         <p class="AssetStatDesktop__Caption-sc-1dxbd6x-9 hTSGYu">
                                                                                         </p>
@@ -449,7 +449,7 @@
                                                                                         <div class="PercentBarBuying__Container-pn1f5a-0 kHpLwL">
                                                                                             <div color="positive"
                                                                                                  class="PercentBarBuying__Text-pn1f5a-2 hBJvfP">
-                                                                                                77% buy
+                                                                                                77.4% buy
                                                                                             </div>
                                                                                             <div class="PercentBarBuying__PercentBar-pn1f5a-1 RvBWx">
                                                                                                 <div color="positive"
@@ -527,7 +527,7 @@
                                                                                             </div>
                                                                                             <div color="textLight"
                                                                                                  class="PercentBarBuying__Text-pn1f5a-2 gvPpSl">
-                                                                                                23%
+                                                                                                22.6%
                                                                                                 sell
                                                                                             </div>
                                                                                         </div>
