--- a/tmpl/_price.html
+++ b/tmpl/_price.html
@@ -601,14 +601,14 @@
                                                                                             <div class="cds-flex-fytym9g cds-center-c5dc66o cds-column-cygaqsr cds-3-_1f9iorr">
                                                                                                 <p class="AssetStatDesktop__Caption-sc-1dxbd6x-9 hTSGYu">
                                                                                                     Bitcoin</p>
-                                                                                                <p class="AssetStatDesktop__ValueTextPerformance-sc-1dxbd6x-6 jodfgL">
-                                                                                                    +96%</p>
+                                                                                                <p class="AssetStatDesktop__ValueTextPerformance-sc-1dxbd6x-6 jodfgL" style="color:var(--negative)">
+                                                                                                    -19%</p>
                                                                                             </div>
                                                                                             <div class="cds-flex-fytym9g cds-center-c5dc66o cds-column-cygaqsr cds-3-_1f9iorr">
                                                                                                 <p class="AssetStatDesktop__Caption-sc-1dxbd6x-9 hTSGYu">
                                                                                                     Market</p>
                                                                                                 <p class="AssetStatDesktop__ValueTextPerformance-sc-1dxbd6x-6 vicRW">
-                                                                                                    +227%</p>
+                                                                                                    -24%</p>
                                                                                             </div>
                                                                                         </div>
                                                                                     </div>
